namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vision-week
  labels:
    name: vision-week
    environment: production
    app: vision-week-virtual-exploration
  annotations:
    description: "Namespace pour l'application Vision Week Virtual Exploration"
